# stock-valuation

./: .gitignore  README.md  pyproject.toml
src/stock_valuation/: __init__.py  cli.py  diagnostics.py  errors.py  processor.py  redaction.py  stock.py  yfinance_client.py
src/stock_valuation/clients/: __init__.py  ticker_factory.py  ticker_protocol.py  yfinance_client.py
src/stock_valuation/contracts/: __init__.py
src/stock_valuation/domain/: __init__.py  assumptions.py  financials.py  forecasts.py  market.py  valuation.py
src/stock_valuation/errors/: __init__.py  invalid_assumptions_error.py  market_data_unavailable_error.py  metric_unavailable_error.py  normalization_error.py  provider_unavailable_error.py  statement_unavailable_error.py  stock_valuation_error.py  ticker_not_found_error.py  unsupported_currency_error.py
src/stock_valuation/mapping/: __init__.py
src/stock_valuation/providers/: __init__.py  config.py  errors.py  protocols.py  results.py
tests/: test_cli.py  test_stock.py  test_yfinance_client.py
tests/acceptance/: __init__.py  conftest.py  test_cli_scenarios.py  test_workflow_scenarios.py
tests/clients/: test_yfinance_client.py
tests/contracts/: test_data_contracts.py
tests/domain/: test_domain_models.py
tests/errors/: test_diagnostics.py  test_error_model.py
tests/mapping/: test_yfinance_metric_mapping.py
tests/providers/: test_provider_contracts.py
tests/valuation/: test_cost_of_capital_and_wacc.py  test_equity_bridge_and_intrinsic_value.py  test_fcff_and_growth.py  test_terminal_value_and_discounting.py
(+2 files in other folders)
