[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stock-valuation"
version = "0.1.0"
description = "CLI application for Damodaran-style intrinsic stock valuation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2,<3.0",
    "yfinance>=0.2.54,<0.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
]

[project.scripts]
stock-valuation = "stock_valuation.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
